--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
     "vue": "^3.2.13",
+    "vue-qrcode-reader": "^5.4.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
